# ZealSync

./: .gitignore  CLAUDE.md  README.md
docs/: DECISIONS.md  PLAN.md  WIRE_PROTOCOL.md
docs/reference/: MArkersLIVE_deobfuscated.lua  MArkersServer_clean.lua  README.md  SYNC_FLOW.md  ma_tools_ui_probe_report.md
ma3/docs/: install.md
ma3/plugins/: ZealSync_Discover.lua  ZealSync_Info.lua  ZealSync_Markers.lua
ma3/shared/: discover.lua  version.lua  wire.lua
ma3/tools/: build_plugin_xml.py
reaper/: CMakeLists.txt  README.md
reaper/include/: reaper_plugin_compat.h
reaper/src/: main.cpp  version.h
reaper/src/net/: dispatcher.cpp  dispatcher.h  framing.cpp  framing.h  listener.cpp  listener.h  main_thread_queue.cpp  main_thread_queue.h  protocol.cpp  protocol.h  udp_discovery.cpp  udp_discovery.h  uuid.cpp  uuid.h
reaper/src/reaper_api/: project.cpp  project.h
reaper/src/sync/: info.cpp  info.h  info_handler.cpp  info_handler.h  markers.cpp  markers.h  markers_response.cpp
reaper/tests/: markers_test.cpp  queue_test.cpp  udp_discovery_test.cpp  uuid_test.cpp
